--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,14 +4,14 @@ server:
     context-path: /api
 
 spring:
+  profiles:
+    active: dev
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${SERVICE_HOST:127.0.0.1}:3090/db_admin?serverTimezone=Asia/Shanghai
     username: root
     password: 123456
   redis: # redis配置
-    host: ${SERVICE_HOST:127.0.0.1} # IP
     port: 6379  # 端口
     password: 123456 # 密码
     connect-timeout: 10s  # 连接超时时间
@@ -33,4 +33,4 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath:mapper/*.xml
 
-avatarImagesFilePath: /Users/dinglun/Documents/java/java-admin/src/main/static/images/
+avatarImagesFilePath: images/
