feature: add localstorage function and goods, staff feature

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,4 +4,4 @@ spring:
   redis: # redis配置
     host: 18.234.73.46 # IP
 
-avatarImagesFilePath: /home/ec2-user/app/images
+avatarImagesFilePath: /app/images
