--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8888
   servlet:
-    context-path: /api
+    context-path: /req
 
 spring:
   profiles:
@@ -21,6 +21,19 @@ spring:
         max-wait: 200s  # 连接池最大阻塞等待时间（使用负值表示没有限制） 默认 -1
         max-idle: 8 # 连接池中的最大空闲连接 默认 8
         min-idle: 0 # 连接池中的最小空闲连接 默认 0
+  mail:
+    host: smtp.163.com
+    port: 465
+    username: 13610307032@163.com
+    password: GEPPIPRLOFVZLISU
+    properties:
+      mail:
+        smtp:
+          auth: true
+          ssl:
+            enable: true
+          starttls:
+            enable: true
 
 
 mybatis-plus:
