--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,15 @@ server:
   port: 8888
   servlet:
     context-path: /req
+    session:
+      timeout: 60000
 
 spring:
   profiles:
     active: prod
+  mvc:
+    async:
+      request-timeout: 60000
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
